<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/fileUrlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_url" />

    <TextView
        android:id="@+id/copiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copies" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />
</LinearLayout>
